--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -35,15 +35,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="12dp">
+            android:padding="8dp">
 
             <!-- Title and subtitle -->
             <TextView
-                android:id="@+id/text_name"
+                android:id="@+id/text_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="2"
                 android:lines="2"
+                android:ellipsize="end"
                 android:textAllCaps="true"
                 android:textAppearance="?attr/textAppearanceListItem"
                 android:textColor="?android:attr/textColorPrimaryInverse"
@@ -56,7 +57,9 @@
                 android:maxLines="2"
                 android:lines="2"
                 android:gravity="bottom"
+                android:ellipsize="end"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:textAllCaps="true"
                 android:textAppearance="?attr/textAppearanceListItemSecondary"
                 android:textColor="?android:attr/textColorSecondaryInverse"
