--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,9 +24,10 @@
     </style>
 
     <style name="AppTheme.DetailsButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">11sp</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
+        <item name="android:padding">0dp</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
