--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -20,7 +20,7 @@
         <ImageView
             android:id="@+id/img_thumbnail"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="@dimen/recycler_item_width"
             app:srcCompat="@drawable/ic_marvel"
             android:scaleType="centerCrop"
             android:contentDescription="@string/desc_thumbnail" />
