--- a/app/src/main/res/layout/activity_tabs.xml
+++ b/app/src/main/res/layout/activity_tabs.xml
@@ -33,9 +33,18 @@
         -->
     </com.google.android.material.appbar.AppBarLayout>
 
+    <TextView
+        android:id="@+id/text_attribution"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        style="@style/AppTheme.Attribution"
+        tools:text="Data provided by Marvel. © 2020 MARVEL" />
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/text_attribution"
         android:layout_below="@id/app_bar">
 
         <com.google.android.material.appbar.AppBarLayout
