--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox</item>
+        <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox
+        </item>
         <item name="tabStyle">@style/Widget.MaterialComponents.TabLayout.Colored</item>
     </style>
 
@@ -29,7 +30,7 @@
         <item name="android:insetBottom">0dp</item>
         <item name="android:padding">0dp</item>
     </style>
-    
+
     <style name="AppTheme.Attribution" parent="Widget.MaterialComponents.TextView">
         <item name="android:textAppearance">?attr/textAppearanceCaption</item>
         <item name="android:textColorLink">@android:color/secondary_text_light</item>
